# pg2_parcial3

./: .gitignore  LICENSE  MANIFEST.in  README.md  ejemplo.py  pyproject.toml  requiemens.txt  setup.cfg  setup.py
src/jorge_ch_pg2_tecba/: validators.py
src/jorge_choque_pg2_tecba/: __init__.py  core.py
