[metadata]
name = jorge_ch_pg2_tecba
version = 0.0.1
author = Jorge Daniel Choque Ferrufino
author_email = jorgechoque.sis24ch@tecba.edu.bo
description = Una librería básica de validadores para datos personales y de contacto
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CubeFreaKLab/pg2_parcial3
project_urls =
    Bug Tracker = https://github.com/CubeFreaKLab/pg2_parcial3/issues
    Source Code = https://github.com/CubeFreaKLab/pg2_parcial3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    setuptools>=61.0
    wheel
    build
    twine

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    black
    flake8
    mypy

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True